fix: remove about page and all related logics to the ThemeProvider to be aligned with the original design

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -349,3 +349,19 @@ template {
 [hidden] {
   display: none;
 }
+
+/* Header-Footer-Outlet
+   ========================================================================== */
+
+.outer-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.page {
+  flex: 1;
+}
+
+/* Header-Footer-Outlet
+     ========================================================================== */
